test/negative/305_unknown_symbol_in_module.fx
// expect: not found
import Math
val x = Math.no_such_function(1.0)
println(x)
